Fixed weird flickering of tooltip

--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -32,6 +32,7 @@ h1
   background: white
   border: 0px
   border-radius: 4px
+  z-index: 100
 
 
 svg
